Working on making it easy to work in coffee.

--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
   "devDependencies": {
     "longjohn": "*",
     "chai": "*",
-    "mocha": "*"
+    "mocha": "*",
+    "coffee-script" : "*",
+    "grunt-coffee": "*",
+    "grunt": "*"
   },
 
   "_npmUser": {
