Coffeescript for tests too.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "longjohn": "*",
     "chai": "*",
     "mocha": "*",
+    "sinon": "*",
     "coffee-script" : "*",
     "grunt-coffee": "*",
     "grunt": "*"
