More work on testing functionality.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "async": "*",
     "underscore": "*",
     "require-namespace": "*",
-    "rules" : "*"
+    "rules" : "*",
+    "chai": "*"
   },
 
   "keywords": [
