Tests are passing but need to make a few fixes.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "underscore": "*",
     "require-namespace": "*",
     "rules" : "*",
-    "chai": "*"
+    "chai": "*",
+    "winston": "*"
   },
 
   "keywords": [
