--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.92",
+  "version": "0.0.92-alpha.1",
 
   "name": "testresources",
   "description": "Adds some conventions to superagent to make testing HTTP APIs quicker.",
