Removing approach of changing URL on supertest request, doesn;t work for PUT with body.

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "mocha": "*",
         "sinon": "*",
         "coffee-script": "*",
+        "body-parser": "*",
 
         "chai-as-promised": "*"
     },
